--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ Brings up the file browser.<br>
 
 Click on the 'Browse' button and select the file. Press OK.<br>
 
-a.If the file is raw text (just simple unannotated text, nothing sinister), it will take you to an editor where you can edit the text so that one sentence is on one line. You can also correct the segmentation or words etc. If you do any editing here, righ click and select Save. Then close the text editor window.
-b. You will be asked whether you want to run the POS tagger. (For testing purposes, select No as the trained model may not be present).
-c. You will now be asked whether you want to run the Chunker. (For testing purposes, select No as the trained model may not be present).
+1. If the file is raw text (just simple unannotated text, nothing sinister), it will take you to an editor where you can edit the text so that one sentence is on one line. You can also correct the segmentation or words etc. If you do any editing here, righ click and select Save. Then close the text editor window.
+1. You will be asked whether you want to run the POS tagger. (For testing purposes, select No as the trained model may not be present).
+1. You will now be asked whether you want to run the Chunker. (For testing purposes, select No as the trained model may not be present).
 
 Will open the file in the interface.<br>
 
