--- a/index.html
+++ b/index.html
@@ -3,62 +3,65 @@ layout: default
 title: A Collection of Tools and APIs for Language Processing
 ---
 
-Sanchay is an open source platform for working on languages, especially South Asian languages, using computers and also for developing Natural Language Processing (NLP) or other text processing applications. It consists of various tools and APIs for this purpose. It is still in the development stage and the design has not yet stabilized, but components like a text editor with customizable support for languages and encodings, annotation interfaces, etc. was first released as an experimental version (0.1) on Sourceforge.net. The next version (0.2) has been available on the Internet and has also been released on Sourceforge.net, along with the latest version (0.3). It is meant to be complementary to the other existing NLP tools and libraries.<br>
+<h1>A Collection of Tools and APIs for Language Processing</h1>
 
-Some of the components in the released version are: Syntactic annotation interface, generalised table and tree components, SSF (Shakti Standard Format) API, feature structure API, parallel corpus markup interface, customizable language and encoding support, Sanchay text editor, language and encoding identification, file splitter and format converter, task setup generator (only for syntactic annotation), a simple but powerful data structure called Properties Manager along with a GUI for purposes like customization of applications, a find/replace/extract tool, a CRF based automatic annotation tool, and a tree visualizer for phrase structure and dependency relations. Some recent additions include Sanchay Corpus Query Language (SCQL) and the Sanchay Shell. User documentation has been provided for some of these components. More will be added soon. Some API doc umentation for programmers will also be provided later.<br>
+<p>Sanchay is an open source platform for working on languages, especially South Asian languages, using computers and also for developing Natural Language Processing (NLP) or other text processing applications. It consists of various tools and APIs for this purpose. It is still in the development stage and the design has not yet stabilized, but components like a text editor with customizable support for languages and encodings, annotation interfaces, etc. was first released as an experimental version (0.1) on Sourceforge.net. The next version (0.2) has been available on the Internet and has also been released on Sourceforge.net, along with the latest version (0.3). It is meant to be complementary to the other existing NLP tools and libraries.</p>
 
-Sanchay has an object oriented architecture where the emphasis is on a design based on things like modularity, reusability, extensibility and maintainability. The implementation is purely in Java, which means it is platform independent and can be used on Windows as well as Linux without needing any extra setup except installing JDK or JRE.<br>
+<p>Some of the components in the released version are: Syntactic annotation interface, generalised table and tree components, SSF (Shakti Standard Format) API, feature structure API, parallel corpus markup interface, customizable language and encoding support, Sanchay text editor, language and encoding identification, file splitter and format converter, task setup generator (only for syntactic annotation), a simple but powerful data structure called Properties Manager along with a GUI for purposes like customization of applications, a find/replace/extract tool, a CRF based automatic annotation tool, and a tree visualizer for phrase structure and dependency relations. Some recent additions include Sanchay Corpus Query Language (SCQL) and the Sanchay Shell. User documentation has been provided for some of these components. More will be added soon. Some API doc umentation for programmers will also be provided later.</p>
 
-## How do I Start Using Sanchay?
+<p>Sanchay has an object oriented architecture where the emphasis is on a design based on things like modularity, reusability, extensibility and maintainability. The implementation is purely in Java, which means it is platform independent and can be used on Windows as well as Linux without needing any extra setup except installing JDK or JRE.</p>
 
-First ensure that the Sun (now Oracle) JDK 1.6 is installed on your system (the JDK that comes with Linux might not work).<br>
+<h2>How do I Start Using Sanchay?</h2>
 
-After that, download the Sanchay zip or tar file from the Downloads or the Latest Builds section. If you want the latest version, it is better to go to the Latest Builds section.<br>
+<p>First ensure that the Sun (now Oracle) JDK 1.6 is installed on your system (the JDK that comes with Linux might not work).</p>
 
-Then, before starting, preferably [optionally] create a directory named 'sanchay' and extract the Sanchay zip or tar file into it. This directory ('sanchay') could be the place where you put things related to Sanchay. On extracting the zip/tar file, another directory (e.g. Sanchay-03-05-11) will be created inside the 'sanchay' directory, which will be the actual Sanchay directory from where the program would start.<br>
+<p>After that, download the Sanchay zip or tar file from the Downloads or the Latest Builds section. If you want the latest version, it is better to go to the Latest Builds section.</p>
 
-The description below uses the Syntactic Annotation Interface as an example application in Sanchay that you might want to use.
+<p>Then, before starting, preferably [optionally] create a directory named 'sanchay' and extract the Sanchay zip or tar file into it. This directory ('sanchay') could be the place where you put things related to Sanchay. On extracting the zip/tar file, another directory (e.g. Sanchay-03-05-11) will be created inside the 'sanchay' directory, which will be the actual Sanchay directory from where the program would start.</p>
 
-### 1. Start<br>
+<p>The description below uses the Syntactic Annotation Interface as an example application in Sanchay that you might want to use.</p>
 
-[Linux]<br>
+<h3>1. Start</h3>
 
-> user@host:~$ cd sanchay/
-> user@host:~/sanchay$ cd Sanchay-03-05-11/
-> user@host:~/sanchay/Sanchay-03-05-11$ sh Sanchay.sh
+<p>[Linux]</p>
 
-[Windows]<br>
+<code>user@host:~$ cd sanchay
+user@host:~/sanchay$ cd Sanchay-03-05-11/
+user@host:~/sanchay/Sanchay-03-05-11$ sh Sanchay.sh</code>
 
-Go to the folder created when the Sanchay zip (or tar) file was extracted.<br>
+<p>[Windows]</p>
 
-Find the file named Sanchay.bat (It might be displayed as just Sanchay with a gear wheel as the icon). Double click on it.<br>
+<p>Go to the folder created when the Sanchay zip (or tar) file was extracted.</p>
 
-Brings up the Sanchay GUI.
+<p>Find the file named Sanchay.bat (It might be displayed as just Sanchay with a gear wheel as the icon). Double click on it.</p>
 
-### 2. Go to the Syntactic Annotation Interface
+<p>Brings up the Sanchay GUI.</p>
 
-Look for the button labelled SA and click on it.<br>
+<h3>2. Go to the Syntactic Annotation Interface</h3>
 
-Brings up the Syntactic Annotation Interface.<br>
+<p>Look for the button labelled SA and click on it.</p>
 
-### 3. Find the 'Open' button and click on it.
+<p>Brings up the Syntactic Annotation Interface.</p>
 
-Brings up the file browser.<br>
+<h3>3. Find the 'Open' button and click on it.</h3>
 
-(The language and encoding can also be selected from here.)
+<p>Brings up the file browser.</p>
 
-### 4. Open the file to be annotated.<br>
+<p>(The language and encoding can also be selected from here.)</p>
 
-Click on the 'Browse' button and select the file. Press OK.<br>
+<h3>4. Open the file to be annotated.</h3>
 
-1. If the file is raw text (just simple unannotated text, nothing sinister), it will take you to an editor where you can edit the text so that one sentence is on one line. You can also correct the segmentation or words etc. If you do any editing here, righ click and select Save. Then close the text editor window.
-1. You will be asked whether you want to run the POS tagger. (For testing purposes, select No as the trained model may not be present).
-1. You will now be asked whether you want to run the Chunker. (For testing purposes, select No as the trained model may not be present).
+<p>Click on the 'Browse' button and select the file. Press OK.</p>
 
-Will open the file in the interface.<br>
+<ol>
+<li>If the file is raw text (just simple unannotated text, nothing sinister), it will take you to an editor where you can edit the text so that one sentence is on one line. You can also correct the segmentation or words etc. If you do any editing here, righ click and select Save. Then close the text editor window.</li>
+<li>You will be asked whether you want to run the POS tagger. (For testing purposes, select No as the trained model may not be present).</li>
+<li>You will now be asked whether you want to run the Chunker. (For testing purposes, select No as the trained model may not be present).</li>
 
-(Check the number of sentences to see if all the data is loaded properly)
+<p>Will open the file in the interface.</p>
 
-### 5. Start annotation
+<p>(Check the number of sentences to see if all the data is loaded properly)</p>
 
-Now you can start annotation.
+<h3>5. Start annotation</h3>
+
+<p>Now you can start annotation.</p>
